--- a/resources/eng.yml
+++ b/resources/eng.yml
@@ -11,7 +11,7 @@ entity.delete: "Entity delete successfully"
 entity.notExistId: "That entity is not exist"
 command.create.usage: "/npc create [type] [name] [skinPath(optional)] [geometryPath(optional)] - Create entity"
 command.delete.usage: "/npc remove [id] - Delete entity"
-command.edit.usage: "/npc edit [command|message] [text...] - Edit entity"
+command.edit.usage: "/npc edit [command|message|scale] [text...] - Edit entity"
 command.get.usage: "/npc get - Get entities"
 command.onlyAccept: "{%0} is only accept {%1}"
 command.entity.list: "Entity list: "
