--- a/resources/kor.yml
+++ b/resources/kor.yml
@@ -11,7 +11,7 @@ entity.delete: "엔티티를 성공적으로 제거했습니다."
 entity.notExistId: "해당 엔티티는 존재하지 않습니다."
 command.create.usage: "/npc create [타입] [이름] [스킨 경로(필요시)] [geometry 경로(필요시)] - 엔티티를 생성합니다."
 command.delete.usage: "/npc remove [아이디] - 엔티티를 제거합니다."
-command.edit.usage: "/npc edit [command|message] [text...] - 엔티티를 수정합니다."
+command.edit.usage: "/npc edit [command|message|scale] [text...] - 엔티티를 수정합니다."
 command.get.usage: "/npc get - 엔티티 목록을 불러옵니다."
 command.onlyAccept: "{%0}은(는) {%1}만 허용합니다."
 command.entity.list: "사용 가능한 엔티티: "
