Fix translation for eng

--- a/resources/eng.yml
+++ b/resources/eng.yml
@@ -7,7 +7,7 @@ entity.spawn: "{%0} entity created"
 entity.path: "Please input the Skin or Geometry file path"
 entity.geometry: "GeometryName does not exist in the geometry file"
 entity.notExist: "That entity is not exist"
-entity.delete: "Entity delete $thisly"
+entity.delete: "Entity delete successfully"
 entity.notExistId: "That entity is not exist"
 command.create.usage: "/npc create [type] [name] [skinPath(optional)] [geometryPath(optional)] - Create entity"
 command.delete.usage: "/npc remove [id] - Delete entity"
